--- a/auth.html
+++ b/auth.html
@@ -55,7 +55,7 @@
     <div>
         <h1>Sign up with phone number</h1>
         <form id="phone-signup">
-            <input name="phone" type="tel" placeholder="phone number" />
+            <input name="phone" type="password" placeholder="phone number" />
             <button id="phone-btn"  type="button">send verification code</button>
 
             <br/>
