--- a/auth.html
+++ b/auth.html
@@ -55,7 +55,7 @@
     <div>
         <h1>Sign up with phone number</h1>
         <form id="phone-signup">
-            <input name="phone" type="password" placeholder="phone number" />
+            <input name="phone" type="tel" placeholder="phone number" />
             <button id="phone-btn"  type="button">send verification code</button>
 
             <br/>
@@ -80,6 +80,7 @@
             <button id="reset-pw-btn" type="button">reset password</button>
         </form>
     </div>
+
 
 
 
